--- a/angular.json
+++ b/angular.json
@@ -23,11 +23,11 @@
               "src/assets"
             ],
             "styles": [
-      
+      "node_modules/owl.carousel/dist/assets/owl.carousel.min.css",
               "src/styles.css"
             ],
             "scripts": [
-              
+              "node_modules/owl.carousel/dist/owl.carousel.min.js"
             ]
           },
           "configurations": {
