--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "angular4-carousel": "^3.1.8",
     "core-js": "^2.5.4",
     "mdbootstrap": "^4.5.13",
+    "owl.carousel": "^2.3.4",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
